sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:5: error: not found: value ecart
  while (ecart >= 1 || echanges){
         ^AlgCombSort:6: error: not found: value ecart
    if (ecart > 1){
        ^AlgCombSort:7: error: not found: value ecart
      ecart = (ecart.toDouble / 1.3).toInt;
      ^AlgCombSort:9: error: not found: value i
    i = 0;
    ^AlgCombSort:10: error: not found: value i
    while (i + ecart < getNombreValeurs()){
           ^AlgCombSort:10: error: not found: value ecart
    while (i + ecart < getNombreValeurs()){
               ^AlgCombSort:11: error: not found: value i
      if (getValeur(i) > getValeur(i + ecart)){
                    ^AlgCombSort:11: error: not found: value i
      if (getValeur(i) > getValeur(i + ecart)){
                                   ^AlgCombSort:11: error: not found: value ecart
      if (getValeur(i) > getValeur(i + ecart)){
                                       ^AlgCombSort:12: error: not found: value i
        echange(i, i + ecart);
                ^AlgCombSort:12: error: not found: value i
        echange(i, i + ecart);
                   ^AlgCombSort:12: error: not found: value ecart
        echange(i, i + ecart);
                       ^AlgCombSort:13: error: not found: value i
        i += 1;
        ^